--- a/boards/mx31ads-eldk_defconfig
+++ b/boards/mx31ads-eldk_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: KERNELVERSION
-# Sat Jul 17 14:27:35 2010
+# Sun Jul 18 02:12:11 2010
 #
 
 #
@@ -46,9 +46,11 @@ MKR_SRC_BASEDIR=$(HOME)/src:/usr/src
 # Base skeleton
 #
 MKR_BASE=y
+MKR_BASE_SRCDIR=$(srctree)/boards/$(MKR_BOARD)
 MKR_BOARD=generic
 MKR_SERIAL_DEV=ttymxc0
 MKR_SERIAL_BAUDRATE=115200
+# MKR_MOUNT is not set
 
 #
 # Linux kernel
@@ -122,12 +124,15 @@ MKR_NETCAT_SRCDIR=netcat-*
 #
 # Make
 #
-# MKR_MAKE is not set
+MKR_MAKE=y
+MKR_MAKE_SRCDIR=make-*
 
 #
 # LTP
 #
-# MKR_LTP is not set
+MKR_LTP=y
+MKR_LTP_SRCDIR=ltp-full-*
+# MKR_LTP_MAINT is not set
 
 #
 # Real-time tests & benches
@@ -135,6 +140,7 @@ MKR_NETCAT_SRCDIR=netcat-*
 MKR_TESTS=y
 MKR_TESTS_SRCDIR=$(srctree)/tests
 MKR_TESTS_XENO=y
+MKR_TESTS_LTP=y
 
 #
 # Output
