--- a/boards/mx31ads_defconfig
+++ b/boards/mx31ads_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: KERNELVERSION
-# Fri Jul 16 13:17:50 2010
+# Sun Jul 18 04:07:38 2010
 #
 
 #
@@ -46,9 +46,15 @@ MKR_SRC_BASEDIR=$(HOME)/src:/usr/src
 # Base skeleton
 #
 MKR_BASE=y
+MKR_BASE_SRCDIR=$(srctree)/boards/$(MKR_BOARD)
 MKR_BOARD=generic
+# MKR_SERIAL_STD is not set
+MKR_SERIAL_CUSTOM=y
 MKR_SERIAL_DEV=ttymxc0
+MKR_SERIAL_MAJOR=207
+MKR_SERIAL_MINOR=16
 MKR_SERIAL_BAUDRATE=115200
+# MKR_MOUNT is not set
 
 #
 # Linux kernel
@@ -138,6 +144,7 @@ MKR_LTP_SRCDIR=ltp-full-*
 MKR_TESTS=y
 MKR_TESTS_SRCDIR=$(srctree)/tests
 MKR_TESTS_XENO=y
+MKR_TESTS_LTP=y
 
 #
 # Output
