Change default linux configuration default values

--- a/build-tools/Makefile.pkgbuild
+++ b/build-tools/Makefile.pkgbuild
@@ -20,6 +20,7 @@ endif
 
 # Toolchain arguments
 override ARCH := $(MKR_ARCH)
+override KARCH := $(MKR_KARCH)
 override ARCH_FLAGS := $(MKR_ARCH_FLAGS)
 override CC := $(MKR_CC)
 override CXX := $(MKR_CXX)
