--- a/busybox/Kconfig
+++ b/busybox/Kconfig
@@ -7,14 +7,14 @@ config BUSYBOX
 if BUSYBOX
 
 config BUSYBOX_SRCDIR
-       srcdir "Source directory"
-       default "busybox-*"
+	srcdir "Source directory"
+	default "busybox-*"
 
 config BUSYBOX_CONFIG
 	string "Configuration file"
 	default "defconfig"
 	help
-	  The kernel configuration file, it may be a relative path, it will be
+	  The configuration file, it may be a relative path, it will be
 	  taken as relative to the board directory, or defconfig to
 	  use BusyBox default configuration.
 
