--- a/build-tools/Makefile.pkgbuild
+++ b/build-tools/Makefile.pkgbuild
@@ -147,26 +147,25 @@ rootfs:
 
 .PHONY: default-copyall-rootfs
 default-copyall-rootfs:
-	$(Q)cat .mkr.filelist .mkr.dirlist | \
-		if ! ( mkdir -p $(rootfs); cd $(staging); \
-			xargs -r -i rsync -lptgodDR \{\} $(rootfs); ); then \
-			echo Error: rsync failed, please try again; \
-			rm .mkr.fakeroot; \
-			cat .mkr.filelist | \
-			{ cd staging; xargs -r rm -f; } > /dev/null 2>&1; \
-			cat .mkr.filelist | \
-			{ cd rootfs; xargs -r rm -f; } > /dev/null 2>&1; \
-			cat .mkr.dirlist | { cd staging; xargs -r \
-			rmdir --ignore-fail-on-non-empty; } > /dev/null 2>&1; \
-			cat .mkr.dirlist | { cd rootfs; xargs -r \
-			rmdir --ignore-fail-on-non-empty; } > /dev/null 2>&1; \
-			exit 1; \
-		fi
+	$(Q)if ! ( mkdir -p $(rootfs); cd $(staging); \
+		    rsync -lptgodDR `cat $(CURDIR)/.mkr.dirlist $(CURDIR)/.mkr.filelist` $(rootfs); ); then \
+		echo Error: rsync failed, please try again; \
+		rm .mkr.fakeroot; \
+		cat .mkr.filelist | \
+		{ cd staging; xargs -r rm -f; } > /dev/null 2>&1; \
+		cat .mkr.filelist | \
+		{ cd rootfs; xargs -r rm -f; } > /dev/null 2>&1; \
+		cat .mkr.dirlist | { cd staging; xargs -r \
+		rmdir --ignore-fail-on-non-empty; } > /dev/null 2>&1; \
+		cat .mkr.dirlist | { cd rootfs; xargs -r \
+		rmdir --ignore-fail-on-non-empty; } > /dev/null 2>&1; \
+		exit 1; \
+	fi
 
 .PHONY: default-rootfs
 default-rootfs:
 	$(Q)if ! ( mkdir -p $(rootfs); cd $(staging); \
-		rsync -lptgodDR $(patsubst %,.%,$(rootfs-y)) $(rootfs); ); then \
+		rsync -lptgodDRr $(patsubst %,.%,$(rootfs-y)) $(rootfs); ); then \
 			echo Error: rsync failed, please try again; \
 			rm .mkr.fakeroot; \
 			cat .mkr.filelist | \
