fakeroot: rebuild when builddir changes, fix scary warning

--- a/build-tools/fakeroot-1.14.4/Makefile
+++ b/build-tools/fakeroot-1.14.4/Makefile
@@ -1,4 +1,4 @@
-config.status:
+config.status: $(O)/.mkr.builddir
 	$(srctree)/build-tools/fakeroot-1.14.4/configure \
 		--prefix=$(O)/build-tools \
 		CC="$(HOSTCC)" CFLAGS=-O2
