--- a/boards/bf561_defconfig
+++ b/boards/bf561_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Sun Aug  1 20:56:42 2010
+# Sun Aug  1 21:23:50 2010
 #
 
 #
@@ -114,7 +114,8 @@ MKR_XENO_TESTSUITE=y
 #
 # Netcat
 #
-# MKR_NETCAT is not set
+MKR_NETCAT=y
+MKR_NETCAT_SRCDIR=netcat-*
 
 #
 # Make
@@ -129,7 +130,9 @@ MKR_XENO_TESTSUITE=y
 #
 # Real-time tests & benches
 #
-# MKR_TESTS is not set
+MKR_TESTS=y
+MKR_TESTS_SRCDIR=$(srctree)/tests
+MKR_TESTS_XENO=y
 
 #
 # Output
