--- a/build-tools/Makefile.pkgbuild
+++ b/build-tools/Makefile.pkgbuild
@@ -39,7 +39,7 @@ unexport mkr-config O obj
 # Avoid leaking variables (the one passed on command-line) to sub-makes
 MAKEOVERRIDES=
 NOPRINT_MAKEFLAGS=$(filter-out -Rr --no-print-directory, $(MAKEFLAGS))
-MAKE=make MAKEFLAGS="$(NOPRINT_MAKEFLAGS)"
+MAKE=MAKEFLAGS="$(NOPRINT_MAKEFLAGS)" make
 
 pkginst := $(CURDIR)/.mkr.inst
 staging := $(O)/staging
