--- a/boards/generic/skel/etc/mdev.conf
+++ b/boards/generic/skel/etc/mdev.conf
@@ -1,3 +1,2 @@
-@MKR_MOUNT_DEV@ 0:0 0666 @/sbin/automount.sh
-@MKR_MOUNT_DEV@ 0:0 0666 $/sbin/autoumount.sh
-
+@MKR_MOUNT_DEV@ 0:0 0666 @/sbin/mount_storage.sh
+@MKR_MOUNT_DEV@ 0:0 0666 $/sbin/mount_storage.sh
