--- a/build-tools/Makefile.pkgbuild
+++ b/build-tools/Makefile.pkgbuild
@@ -14,6 +14,8 @@ confcheck-y =
 
 ifneq ($(O),linux/)
 ifneq ($(filter $(MAKECMDGOALS),confcheck),)
+$(O)/linux/.config: ;
+
 -include $(O)/linux/.config
 endif
 endif
