copy all xeno-test files in order to get xenomai-head working

--- a/xenomai/Makefile
+++ b/xenomai/Makefile
@@ -86,7 +86,7 @@ rootfs-$(MKR_XENO_TESTSUITE) += \
 	$(MKR_XENO_TESTDIR)/mutex-torture-posix \
 	$(MKR_XENO_TESTDIR)/switchtest \
 	$(MKR_XENO_TESTDIR)/wakeup-time \
-	/usr/bin/xeno-test \
+	/usr/bin/xeno-test* \
 	/usr/bin/xeno-load \
 	/usr/share/xenomai/testsuite/*
 rootfs-$(MKR_XENO_TESTSUITE_UNFREQUENT) += \
